more presub fixes

--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -17,7 +17,7 @@ results <- readRDS("../local/paper-results.rds")
 
 ## Abstract
 
-Much of the richness of human thought is supported by people’s intuitive theories---explanatory mental frameworks that capture the perceived causal and relational structure of the world. But serious consequences can arise when these theories are mistaken. In this paper, we take up an important example of these risks: when misconceptions about vaccine safety discourage vaccination. We argue that addressing misconceptions like these requires awareness of the broader conceptual contexts in which they are embedded. We present a cognitive model of the intuitive theory surrounding vaccination decisions, which we developed by identifying a set of relevant beliefs, surveying a large sample of U.S. adults, and applying Bayesian network structure learning algorithms to their responses (Study 1). We then apply this model to understand belief revision within this larger conceptual system. Our model helped to explain belief revision following an established educational intervention (Study 2), provided insight that supported our formulation of a novel educational intervention that successfully increased vaccination intentions (Studies 3a, 3b), and also helped to explain how people’s beliefs changed following real-world events (Study 4). Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and of discovering and formalizing intuitive theories via computational models. Moreover, it lays the foundation for theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and COVID-19.
+Much of the richness of human thought is supported by people’s intuitive theories---explanatory mental frameworks that capture the perceived causal and relational structure of the world. But serious consequences can arise when these theories are mistaken. In this paper, we consider an important and timely example of these risks: when misconceptions about vaccine safety discourage vaccination. We argue that addressing misconceptions requires awareness of the broader conceptual contexts in which they are embedded. To this end, we sought to develop a cognitive model of the intuitive theory surrounding vaccination decisions. From qualitative research, we identified a set of beliefs relevant to this intuitive theory. Then, we built our model by surveying a large sample of U.S. adults and applying Bayesian network structure learning algorithms to their responses to uncover the connections among these beliefs (Study 1). The resulting model supports understanding of belief revision within this larger conceptual system: Our model helped to explain belief revision following an established educational intervention (Study 2), provided insight that supported our formulation of a novel educational intervention that successfully increased vaccination intentions (Studies 3a, 3b), and also helped to explain how people’s beliefs changed following real-world events (Study 4). Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and of discovering and formalizing intuitive theories via computational models. Moreover, it lays the foundation for theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and COVID-19.
 
 ## Significance Statement
 
@@ -131,7 +131,7 @@ Changes were also observed across the belief network identified in Study 1. Not 
 knitr::include_graphics("../local/s2_plt.png")
 ```
 
-How did this intervention---which focused solely on the dangers of childhood diseases---affect beliefs about *vaccine danger*, *medical skepticism*, *holistic balance*, and so on? One explanation is that this intervention provides direct evidence for *disease severity* beliefs and that other beliefs are revised as a result of their relationships with *disease severity* as captured in the intuitive theory. To examine this, we used the same model developed in Study 1 to simulate how the 13 other beliefs in the intuitive theory would change as a result of the observed change in *disease severity* beliefs (see Materials and methods). As shown in Figure 3, this simulation is a reasonable approximation of what we observed in Study 2: The model’s predictions correlate strongly with observed changes (*r* = `r results$s2$modcorr`). 
+How did this intervention---which focused solely on the dangers of childhood diseases---affect beliefs about *vaccine danger*, *medical skepticism*, *holistic balance*, and so on? One explanation is that this intervention provides direct evidence for *disease severity* beliefs and that other beliefs are revised as a result of their relationships with *disease severity* as captured in the intuitive theory. To examine this, we used the same model developed in Study 1 to simulate how the 13 other beliefs in the intuitive theory would change as a result of the intervention's direct effect on *disease severity* beliefs (see Materials and methods). As shown in Figure 3, this simulation is a reasonable approximation of what we observed in Study 2: The model’s predictions correlate strongly with observed changes (*r* = `r results$s2$modcorr`). 
 
 ### Study 3a and 3b: Targeting beliefs about vaccine toxicity
 
@@ -239,7 +239,7 @@ In particular, we applied what we call the “generative model principle,” spe
 
 We used this sorting to induce a partial ordering of these 14 beliefs, stipulating that directed edges that violated this ordering must not appear in the final network of beliefs (e.g., that there should be no edge from *vaccine intentions* to *naturalism*, although there could be an edge from *naturalism* to *vaccine intentions*). 
 
-To conduct an efficient search through the super-exponential space of DAGs, we tested several learning algorithms implemented in the “bnlearn” R package [@scutari2010] and evaluated their performance through cross validation in our training split (see SI). Following this analysis, we chose to fit our model with the score-based “hill-climbing” algorithm, scoring models via the Bayesian Information Criteria, an asymptotic estimate of the likelihood of the data under a given graph structure. This produced the network shown in Figure 1. See SI for more detailed explanations of these modeling choices.
+To conduct an efficient search through the super-exponential space of graphs, we tested several learning algorithms implemented in the “bnlearn” R package [@scutari2010] and evaluated their performance through cross validation in our training split (see SI). Following this analysis, we chose to fit our model with the score-based “hill-climbing” algorithm, scoring models via the Bayesian Information Criteria, an asymptotic estimate of the likelihood of the data under a given graph structure. This produced the network shown in Figure 1. See SI for more detailed explanations of these modeling choices.
 
 Some caution should be exercised in interpreting the relationships in the network. Due to Bayesian networks' tight connections with structural causal networks, it is tempting to interpret the edges in this network as representing a mental causal model. But, in some cases these relationships are better thought of as probabilistic dependencies or “influence” relations [@williamson2001]. For instance, intuitively we might imagine that vaccines having toxins could cause them to be dangerous and ineffective. These nodes are connected in the model, but the edges between them run in the opposite directions, and therefore do not support a clear causal interpretation. One interpretation is that this edge instead reflects a set membership relation; that toxins are one type of danger vaccines might present. In other cases, our data and explicit constraints do not perfectly identify the directions of the edges. This is the case for two edges (Naturalism $\rightarrow$  Holistic Balance and Medical Skepticism $\rightarrow$ Parental Expertise; see SI for details). In both cases, we do not feel it is intuitive which direction the edge should flow in, nor even that it should be directed at all; we might even speculate there is an additional unmeasured variable that connects these beliefs and that would best account for their association. 
 
