--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -15,11 +15,11 @@ library(tidyverse)
 results <- readRDS("../local/paper-results.rds") 
 ```
 
-## Abstract
+# Abstract
 
 Much of the richness of human thought is supported by people’s intuitive theories---explanatory mental frameworks that capture the perceived causal and relational structure of the world. But serious consequences can arise when these theories are mistaken. In this paper, we consider an important and timely example of these risks: when misconceptions about vaccine safety discourage vaccination. We argue that addressing misconceptions requires awareness of the broader conceptual contexts in which they are embedded. To this end, we sought to develop a cognitive model of the intuitive theory surrounding vaccination decisions. From qualitative research, we identified a set of beliefs relevant to this intuitive theory. Then, we built our model by surveying a large sample of U.S. adults and applying Bayesian network structure learning algorithms to their responses to uncover the connections among these beliefs (Study 1). The resulting model supports understanding of belief revision within this larger conceptual system: Our model helped to explain belief revision following an established educational intervention (Study 2), provided insight that supported our formulation of a novel educational intervention that successfully increased vaccination intentions (Studies 3a, 3b), and also helped to explain how people’s beliefs changed following real-world events (Study 4). Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and of discovering and formalizing intuitive theories via computational models. Moreover, it lays the foundation for theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and COVID-19.
 
-## Significance Statement
+# Significance Statement
 
 When people decide whether to vaccinate their children and themselves against dangerous diseases like measles and COVID-19, their decisions are affected by a network of interrelated beliefs about specific diseases, vaccine safety and efficacy, the immune system, the medical system, health, and nature more generally. By creating a computational model of the intuitive theory connecting these different beliefs, we were able to make accurate predictions about how these beliefs are revised in light of educational interventions, design an effective new intervention encouraging vaccination, and understand how these beliefs were affected by real-world events. This approach provides the foundation for richer understandings of intuitive theories more broadly and sheds new light on long-standing theoretical questions about belief revision. 
 
@@ -41,7 +41,7 @@ Here we present a line of theoretical and empirical work that seeks to understan
 
 We argue that correcting misconceptions requires presenting evidence in a way that is sensitive to and persuasive within the broader conceptual context in which those misconceptions reside [see @gershman2019; @weisman.markman2017]. Understanding the revision of any one specific belief (e.g., a misconception like *vaccines are dangerous*) demands a holistic understanding of the wider set of interrelated beliefs that make up people's intuitive theories.
 
-## Modelling intuitive theories
+## Modeling intuitive theories
 
 Quine argued that all of one’s beliefs are intertwined in a “web of belief” [@quine1951; @quine.ullian1978]---an apt metaphor for intuitive theories. Intuitive theories consist of relations between beliefs that specify how states of affairs causally, logically, or otherwise interconnect with one another. Given this definition, we argue that any set of beliefs related by an intuitive theory can be expected to exhibit several qualitative features: 
 
@@ -65,9 +65,9 @@ Here, we used Bayesian network structure learning algorithms to construct a mode
 
 In Study 1, we used Bayesian network structure learning algorithms to develop a cognitive model of the relationships among 14 beliefs related to vaccine hesitancy in a large sample of U.S. adults. In Study 2, we replicated the success of an existing intervention emphasizing the dangers of childhood diseases [@horne.etal2015] and used our model to provide a more detailed understanding of *how and why* this intervention increases vaccine intentions and its effects on related beliefs. In Study 3a and 3b, we drew inspiration from our model to create and validate the success of  a novel intervention aimed at debunking concerns about toxic additives. Finally, in Study 4 we tested whether people's beliefs changed coherently following relevant real-world events, by examining beliefs before and after serious outbreaks of measles in the United States in early 2019. Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and the utility of discovering and formalizing intuitive theories via computational models. And, it lays the foundation for empirically-validated, theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and COVID-19.
 
-## Results
+# Results
 
-### Study 1: Assessing and modeling intuitive theories of vaccination
+## Study 1: Assessing and modeling intuitive theories of vaccination
 
 Our primary outcome of interest was participants’ intentions to vaccinate their children against diseases like measles, mumps, and rubella (*vaccination intentions*). Drawing on a variety of sources, including research on anti-vaccine skepticism, anti-vaccine websites, and our own qualitative work with vaccine skeptics (see SI), we generated a list of 13 additional beliefs that, though surely not exhaustive, might jointly offer a reasonable means of understanding and predicting vaccine intentions.
 
@@ -75,7 +75,7 @@ These included a variety of claims about vaccines, including beliefs about 1) th
 
 We developed psychometrically robust scales to measure these beliefs, then administered these 14 belief scales to participants and in an online survey with `r results$s1$demo$n_include` participants. There were strong intercorrelations among these 14 beliefs confirming that these beliefs are, in fact, closely related to each other and to intentions to vaccinate children (see SI).
 
-#### Structure learning 
+### Structure learning 
 
 We used these intercorrelations to build a cognitive model of the relations among these beliefs via Bayesian network structure learning techniques, using an 80% training split of the data (*n* = 904). Based on the observed associations among participants' beliefs about each of theses issues, we sought to infer how these states of affairs (e.g., that vaccines are dangerous, that diseases are severe) are connected in people's intuitive theories---how people understand these states of affairs to cause, imply, or otherwise influence one another. 
 
@@ -116,7 +116,7 @@ This model structure also helps explain some initially surprising findings. For 
 
 In sum: From a set of potentially relevant beliefs and a general principle guiding the likely relationships among these beliefs, we generated a cognitive model of an intuitive theory of this domain. In Studies 2-4, we use this same model to predict how this intuitive theory guides reasoning about new information.  
 
-### Study 2: Targeting disease severity beliefs
+## Study 2: Targeting disease severity beliefs
 
 One of the few successful educational interventions in this domain was tested by Horne et al. [-@horne.etal2015], who found that emphasizing the dangers of preventable diseases like mumps, measles, and rubella improved participants’ attitudes toward vaccines. Their intervention included descriptions of the symptoms of mumps, measles, and rubella; vivid photos of children suffering from these diseases; and a brief story from the perspective of a parent whose child was hospitalized with measles (see SI). This “disease risk” intervention improved attitudes toward vaccines compared to an irrelevant control essay and compared to an intervention aimed at debunking concerns about vaccines causing autism. 
 
@@ -133,7 +133,7 @@ knitr::include_graphics("../local/s2_plt.png")
 
 How did this intervention---which focused solely on the dangers of childhood diseases---affect beliefs about *vaccine danger*, *medical skepticism*, *holistic balance*, and so on? One explanation is that this intervention provides direct evidence for *disease severity* beliefs and that other beliefs are revised as a result of their relationships with *disease severity* as captured in the intuitive theory. To examine this, we used the same model developed in Study 1 to simulate how the 13 other beliefs in the intuitive theory would change as a result of the intervention's direct effect on *disease severity* beliefs (see Materials and methods). As shown in Figure 3, this simulation is a reasonable approximation of what we observed in Study 2: The model’s predictions correlate strongly with observed changes (*r* = `r results$s2$modcorr`). 
 
-### Study 3a and 3b: Targeting beliefs about vaccine toxicity
+## Study 3a and 3b: Targeting beliefs about vaccine toxicity
 
 The intervention developed by Horne et al. [-@horne.etal2015] and employed in Study 2 is notable for being one of the few educational interventions shown to decrease vaccine hesitancy---but is disease severity the only (or most) effective target for educational interventions in this domain? 
 
@@ -159,7 +159,7 @@ We speculate that changes from pretest to posttest among control participants in
 
 Nevertheless, the success of this intervention in changing people’s responses to our *vaccine intentions* scale highlights the potential of this computational, theory-based approach to understanding belief revision. This model allowed us to design a novel educational intervention focusing on vaccine ingredients that successfully changed participants’ beliefs in a domain where many previously-researched educational approaches have failed---while sparing the time and resources we might have otherwise expended on interventions which our model predicts are unlikely to be successful. 
 
-### Study 4: Natural experiment
+## Study 4: Natural experiment
 
 The early months of 2019 saw the worst U.S. measles outbreak in decades, with over 1000 cases reported by June, mostly in the state of New York. These outbreaks were covered in every major newspaper and by every major news program. Would learning about these tragic events lead people to revise their beliefs about vaccines?
 
@@ -173,7 +173,7 @@ Figure 6 shows the average change in participants’ beliefs following the outbr
 
 Were these changes coherent with respect to the intuitive theory specified by the model developed in Study 1? Unlike in the intervention studies, where a specific belief was targeted by the intervention, it is likely that many beliefs were addressed by media coverage of these outbreaks. To assess whether these changes were coherent, we examined how they were related to the most central of the beliefs we measured, *vaccine intentions*, using our model to predict how the 13 other beliefs in the intuitive theory should be expected to change given the average magnitude of the change observed in *vaccine intentions.* As shown in Figure 6, the changes in participants’ beliefs are very similar to the model’s predictions (*r* = `r results$s4$modcorr`), suggesting that the changes in their beliefs were highly coherent with respect to their intuitive theories of the domain. Modeling these beliefs as united by an intuitive theory not only captures how these beliefs are revised immediately in light of evidence, but also how they are changed by real-world events. 
 
-## Discussion
+# Discussion
 
 Across five studies, we examined how understanding people’s intuitive theories surrounding vaccination decisions could help us formulate educational interventions that would counteract misconceptions about vaccine safety and encourage vaccination. We identified 14 beliefs related to vaccination decisions and captured the relationships among these beliefs in a generative probabilistic cognitive model. Using this model we were able to predict how these beliefs would be affected by controlled educational interventions as well as real-world events. Inspired by our findings and model, we developed an intervention targeting beliefs about toxins in vaccines and found it successfully increased people’s intentions to vaccinate their children---adding to the very short list of effective interventions in this domain.
 
